--- a/Proyecto-JS/css/styles.css
+++ b/Proyecto-JS/css/styles.css
@@ -6,10 +6,7 @@
     float: none;
     clear: both;
 }
-body{
-    background: url('../img/hojas.jpg');
-    background-attachment: fixed;
-}
+
 #global{
     width: 65%;
     margin: 0px auto;
@@ -21,7 +18,6 @@ body{
 #logo{
     font-family: Verdana, Arial;
     font-size: 25px;
-    background: #235E3D;
     letter-spacing: 4px;
     line-height: 80px;
     color: white;
@@ -49,9 +45,6 @@ body{
     display: inline-block;
     transition: all 300ms;
 }
-#menu ul li:hover{
-    background: #235E3D;
-}
 
 #menu a{
     display: block;
@@ -71,9 +64,10 @@ body{
 .post{
     padding: 7px;
 }
-.post h2{
+h2{
     font-size: 30px;
     color: #333;
+    font-family: Helvetica, Arial;
 }
 
 .post .date{
@@ -94,7 +88,6 @@ body{
     text-align: center;
     display: block;
     padding: 15px;
-    background: #235E3D;
     color: white;
     text-decoration: none;
     margin-top: 10px;
@@ -164,4 +157,48 @@ footer{
 
 .bx-wrapper, .bx-viewport{
     height: 250px !important;
+}
+
+#selector-theme{
+    position: fixed;
+    top: 40%;
+    background: rgba(51, 51, 51, 0.7);
+    width: 50px;
+    height: 120px;
+}
+
+#to-green,
+#to-red,
+#to-blue{
+    width:   25px;
+    height:  30px;
+    border:  1px solid white;
+    display: block;
+    margin:  0px auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+#to-green{
+    background: #235E3D;
+}
+
+#to-red{
+    background: #CA3413;
+}
+#to-blue{
+    background: #1F87C4;
+}
+
+.subir{
+    color: white;
+    text-decoration: none;
+    display: block;
+    float: right;
+}
+#box{
+    width: 60%;
+    float: left;
+    margin-top: 40px;
 }
