--- a/Proyecto-JS/css/styles.css
+++ b/Proyecto-JS/css/styles.css
@@ -125,7 +125,9 @@ h2{
 
 form input[type="text"],
 form input[type="password"],
-form input[type="email"]{
+form input[type="email"],
+form input[type="number"],
+select{
     padding: 5px;
     border-radius: 2px;
     border:1px solid gray;
@@ -201,4 +203,38 @@ footer{
     width: 60%;
     float: left;
     margin-top: 40px;
+}
+
+#accordion{
+    margin-top: 20px;
+}
+
+#reloj{
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Helvetica, Arial;
+    color: #333;
+    border: 5px dashed #333;
+    width: 30%;
+    padding: 30px;
+    margin: 0px auto;
+}
+#form_contact{
+    width: 50%;
+    margin-top: 15px;
+    font-family: Arial, Helvetica;
+}
+#form_contact label{
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.form-error{
+    /*float: right;*/
+    font-size: 11px;
+    background: red;
+    color: white;
+    padding: 10px;
+    width: 65%;
 }
